--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -1,6 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
+  creationTimestamp: null
   name: wildfly-operator
 rules:
 - apiGroups:
@@ -56,6 +57,7 @@ rules:
   - wildfly.org
   resources:
   - '*'
+  - wildflyservers
   verbs:
   - create
   - delete
