--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -1,16 +1,16 @@
 # Adds namespace to all resources.
-namespace: temp-system
+#namespace: temp-system
 
 # Value of this field is prepended to the
 # names of all resources, e.g. a deployment named
 # "wordpress" becomes "alices-wordpress".
 # Note that it should also match with the prefix (text before '-') of the namespace
 # field above.
-namePrefix: temp-
+#namePrefix: temp-
 
 # Labels to add to all resources and selectors.
 #commonLabels:
-#  someName: someValue
+#  name: wildfly-operator
 
 bases:
 - ../crd
@@ -28,7 +28,7 @@ patchesStrategicMerge:
 # Protect the /metrics endpoint by putting it behind auth.
 # If you want your controller-manager to expose the /metrics
 # endpoint w/o any authn/z, please comment the following line.
-- manager_auth_proxy_patch.yaml
+#- manager_auth_proxy_patch.yaml
 
 # Mount the controller config file for loading manager configurations
 # through a ComponentConfig type
