--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -4,7 +4,13 @@ resources:
 generatorOptions:
   disableNameSuffixHash: true
 
-configMapGenerator:
-- name: manager-config
-  files:
-  - controller_manager_config.yaml
+#configMapGenerator:
+#- files:
+#  - controller_manager_config.yaml
+#  name: manager-config
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+images:
+- name: controller
+  newName: quay.io/yborgess/wildfly-operator-dev
+  newTag: latest
