--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -1,38 +1,37 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  labels:
-    control-plane: controller-manager
-  name: system
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: controller-manager
-  namespace: system
-  labels:
-    control-plane: controller-manager
+  name: wildfly-operator
 spec:
   selector:
     matchLabels:
-      control-plane: controller-manager
+      name: wildfly-operator
   replicas: 1
   template:
     metadata:
       labels:
-        control-plane: controller-manager
+        name: wildfly-operator
     spec:
-      securityContext:
-        runAsUser: 65532
+      serviceAccountName: wildfly-operator
       containers:
       - command:
         - /manager
         args:
         - --leader-elect
         image: controller:latest
-        name: manager
-        securityContext:
-          allowPrivilegeEscalation: false
+        name: wildfly-operator
+        imagePullPolicy: Always
+        env:
+        - name: WATCH_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
+        - name: POD_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.name
+        - name: OPERATOR_NAME
+          value: "wildfly-operator"
         livenessProbe:
           httpGet:
             path: /healthz
