Added liveness and Readiness Probe configuration

--- a/config/samples/quickstart-cr.yaml
+++ b/config/samples/quickstart-cr.yaml
@@ -5,3 +5,5 @@ metadata:
 spec:
   applicationImage: "quay.io/wildfly-quickstarts/wildfly-operator-quickstart:18.0"
   replicas: 2
+  livenessProbe:
+    initialDelaySeconds: 40
