--- a/config/crd/bases/wildfly.org_wildflyservers.yaml
+++ b/config/crd/bases/wildfly.org_wildflyservers.yaml
@@ -209,6 +209,39 @@ spec:
                 minItems: 1
                 type: array
                 x-kubernetes-list-type: atomic
+              livenessProbe:
+                description: LivenessProbe defines the periodic probe of container
+                  liveness. Container will be restarted if the probe fails
+                properties:
+                  failureThreshold:
+                    description: Minimum consecutive failures for the probe to be
+                      considered failed after having succeeded. Defaults to 3. Minimum
+                      value is 1.
+                    format: int32
+                    type: integer
+                  initialDelaySeconds:
+                    description: Number of seconds after the container has started
+                      before liveness probes are initiated. Defaults to 60 seconds.
+                      Minimum value is 0.
+                    format: int32
+                    type: integer
+                  periodSeconds:
+                    description: How often (in seconds) to perform the probe. Default
+                      to 10 seconds. Minimum value is 1.
+                    format: int32
+                    type: integer
+                  successThreshold:
+                    description: Minimum consecutive successes for the probe to be
+                      considered successful after having failed. Defaults to 1. Must
+                      be 1 for liveness and startup. Minimum value is 1.
+                    format: int32
+                    type: integer
+                  timeoutSeconds:
+                    description: 'Number of seconds after which the probe times out.
+                      Defaults to 1 second. Minimum value is 1. More info: https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle#container-probes'
+                    format: int32
+                    type: integer
+                type: object
               replicas:
                 description: Replicas is the desired number of replicas for the application
                 format: int32
@@ -240,6 +273,40 @@ spec:
                       it defaults to Limits if that is explicitly specified, otherwise
                       to an implementation-defined value. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
                     type: object
+                type: object
+              rivenessProbe:
+                description: ReadinessProbe defines the periodic probe of container
+                  service readiness. Container will be removed from service endpoints
+                  if the probe fails.
+                properties:
+                  failureThreshold:
+                    description: Minimum consecutive failures for the probe to be
+                      considered failed after having succeeded. Defaults to 3. Minimum
+                      value is 1.
+                    format: int32
+                    type: integer
+                  initialDelaySeconds:
+                    description: Number of seconds after the container has started
+                      before liveness probes are initiated. Defaults to 60 seconds.
+                      Minimum value is 0.
+                    format: int32
+                    type: integer
+                  periodSeconds:
+                    description: How often (in seconds) to perform the probe. Default
+                      to 10 seconds. Minimum value is 1.
+                    format: int32
+                    type: integer
+                  successThreshold:
+                    description: Minimum consecutive successes for the probe to be
+                      considered successful after having failed. Defaults to 1. Must
+                      be 1 for liveness and startup. Minimum value is 1.
+                    format: int32
+                    type: integer
+                  timeoutSeconds:
+                    description: 'Number of seconds after which the probe times out.
+                      Defaults to 1 second. Minimum value is 1. More info: https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle#container-probes'
+                    format: int32
+                    type: integer
                 type: object
               secrets:
                 description: Secrets is a list of Secrets in the same namespace as
