--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,14 +31,14 @@ jobs:
         driver: docker
     - name: Containerized End-to-End Tests
       run: eval $(minikube -p minikube docker-env) && make test-e2e-minikube
-    - name: Docker Login to Quay.io (main only)
+    - name: Docker Login to Quay.io (main and 0.5.x only)
       uses: docker/login-action@v1.8.0
-      if: github.ref == 'refs/heads/main'
+      if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/0.5.x'
       with:
         registry: ${{ env.REGISTRY }}
         username: ${{ env.REGISTRY_USER }}
         password: ${{ env.REGISTRY_PASSWORD }}
-    - name: Build and Push Image (main and 0.5.x)
+    - name: Build and Push Image (main and 0.5.x only)
       if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/0.5.x'
       run: make manifests docker-build docker-push
 
