--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,8 +2,8 @@ name: Go
 
 env:
   REGISTRY: quay.io
-  REGISTRY_USER: "wildfly+github_actions"
-  REGISTRY_PASSWORD: ${{ secrets.REGISTRY_ROBOT_PASSWORD }}
+  REGISTRY_USER: ${{ secrets.QUAY_USERNAME }}
+  REGISTRY_PASSWORD: ${{ secrets.QUAY_PASSWORD }}
 
 on:
   push:
@@ -36,9 +36,12 @@ jobs:
       if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/0.5.x'
       with:
         registry: ${{ env.REGISTRY }}
-        username: ${{ QUAY_PASSWORD }}
-        password: ${{ QUAY_USERNAME }}
-    - name: Build and Push Image (main and 0.5.x only)
-      if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/0.5.x'
-      run: make manifests docker-build docker-push
+        username: ${{ env.REGISTRY_USER }}
+        password: ${{ env.REGISTRY_PASSWORD }}
+    - name: Build and Push Image (main)
+      if: github.ref == 'refs/heads/main'
+      run: IMG=quay.io/${{ env.REGISTRY_USER }}/wildfly-operator:latest make manifests docker-build docker-push
+    - name: Build and Push Image (0.5.x)
+      if: github.ref == 'refs/heads/0.5.x'
+      run: TAG=0.5.x IMAGE=wildfly-operator DOCKER_REPO=quay.io/${{ env.REGISTRY_USER }}/ make push
 
